# task_manager_rust

./: .gitignore  README.md  task_manager.sql
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  sessions.rs
backend/src/database_connector/: database.rs
backend/src/handlers/: auth.rs  database.rs  session_handler.rs  tasks.rs
frontend/: Cargo.toml
frontend/src/: core.rs  main.rs
frontend/src/core/: app.rs  auth.rs  json_handler.rs  network.rs  task_handler.rs  ui_handler.rs
