[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = {version = "1.0.210", features = ["derive"]}
tokio = {version ="1.40.0", features = ["full"]}
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["mysql", "runtime-tokio", "chrono"]}
chrono = "0.4.38"
